refactor: some changes