@@ -3,65 +3,61 @@ package com.basereh.app;
 import org.reflections.Reflections;
 
 import java.lang.reflect.Constructor;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
 
 public class StatisticsFacade {
 
-    public List<StatisticTarget> getStatisticTargets() {
-        return Arrays.stream(StatisticTarget.values()).toList();
-    }
-
-    public Set<Class<? extends StatisticMeasure>> getMeasurementMethods() {
+    public List<Class<? extends ScoreCollector>> getScoreCollectors() {
         Reflections reflections = new Reflections("com.basereh.app");
-        return reflections.getSubTypesOf(StatisticMeasure.class);
+        return reflections.getSubTypesOf(ScoreCollector.class).stream().toList();
     }
 
-    public Map<String, List<Float>> groupStudentScoresBy(StudentList studentList, StatisticTarget target) {
-        return studentList.getStudents().stream().collect(Collectors.groupingBy(student -> switch (target) {
-            case CLASS -> student.getClassName();
-            case GRADE -> student.getGrade();
-            default -> student.getSchool();
-        }, Collectors.mapping(Student::getScore, Collectors.toList())));
+    public List<Class<? extends StatisticCalculator>> getMeasurementMethods() {
+        Reflections reflections = new Reflections("com.basereh.app");
+        return reflections.getSubTypesOf(StatisticCalculator.class).stream().toList();
+    }
+
+    private <T> T getInstanceFromClass(Class<? extends T> tClass) {
+        T instance = null;
+        try {
+            Constructor<? extends T> constructor = tClass.getConstructor();
+            instance = constructor.newInstance();
+        } catch (Exception e) {
+            System.out.println(e.getMessage());
+        }
+        return instance;
+    }
+
+    public List<StatisticsResult> calculateSchoolStatistics(
+            StudentList studentList,
+            List<Class<? extends StatisticCalculator>> calculators,
+            List<Class<? extends ScoreCollector>> targetCollectors
+    ) {
+        List<StatisticsResult> results = new ArrayList<>();
+
+        targetCollectors.forEach(targetCollector -> {
+            ScoreCollector collector = getInstanceFromClass(targetCollector);
+            collector.collect(studentList.getStudents()).forEach((name, scores) -> {
+                List<StatisticsMeasureResult> measures = new ArrayList<>();
+                calculators.forEach(calculator -> {
+                    measures.add(new StatisticsMeasureResult(
+                            calculator.getSimpleName(),
+                            getInstanceFromClass(calculator).apply(scores))
+                    );
+                });
+                results.add(new StatisticsResult(name, collector.getTarget(), measures));
+            });
+        });
+        return results;
     }
 
     public List<StatisticsResult> calculateSchoolStatistics(StudentList studentList) {
-        List<StatisticsResult> results = new ArrayList<>();
-        List<String> measurementMethodNames = getMeasurementMethods().stream().map(Class::getSimpleName).toList();
-        results.addAll(calculateSchoolStatistics(studentList, measurementMethodNames, StatisticTarget.SCHOOL));
-        results.addAll(calculateSchoolStatistics(studentList, measurementMethodNames, StatisticTarget.GRADE));
-        results.addAll(calculateSchoolStatistics(studentList, measurementMethodNames, StatisticTarget.CLASS));
-        return results;
+        return new ArrayList<>(calculateSchoolStatistics(studentList, getMeasurementMethods(), getScoreCollectors()));
     }
 
-    public List<StatisticsResult> calculateSchoolStatistics(StudentList studentList, String measurementMethodName) {
-        List<StatisticsResult> results = new ArrayList<>();
-        List<String> measurementMethodNames = Collections.singletonList(measurementMethodName);
-        results.addAll(calculateSchoolStatistics(studentList, measurementMethodNames, StatisticTarget.SCHOOL));
-        results.addAll(calculateSchoolStatistics(studentList, measurementMethodNames, StatisticTarget.GRADE));
-        results.addAll(calculateSchoolStatistics(studentList, measurementMethodNames, StatisticTarget.CLASS));
-        return results;
-    }
-
-    public List<StatisticsResult> calculateSchoolStatistics(StudentList studentList, List<String> measurementMethodNames, StatisticTarget target) {
-        List<StatisticsResult> results = new ArrayList<>();
-        Map<String, List<Float>> groupStudentScores = groupStudentScoresBy(studentList, target);
-        groupStudentScores.forEach((name, scores) -> {
-            List<StatisticsMeasureResult> measures = new ArrayList<>();
-            getMeasurementMethods().forEach(mClass -> {
-                if (measurementMethodNames.contains(mClass.getSimpleName())) {
-                    try {
-                        Constructor<? extends StatisticMeasure> mConstructor = mClass.getConstructor();
-                        StatisticMeasure statisticMeasure = mConstructor.newInstance();
-                        measures.add(new StatisticsMeasureResult(mClass.getSimpleName(), statisticMeasure.calculate(scores)));
-                    } catch (Exception e) {
-                        System.out.println(e.getMessage());
-                    }
-
-                }
-            });
-            results.add(new StatisticsResult(name, target, measures));
-        });
-        return results;
+    public List<StatisticsResult> calculateSchoolStatistics(StudentList studentList, Class<? extends StatisticCalculator> measurementMethod) {
+        return new ArrayList<>(calculateSchoolStatistics(studentList, Collections.singletonList(measurementMethod), getScoreCollectors()));
     }
 }
